compiler/tests/compiler/must_fail/t_16.mil
fn foo(_x : stack u64) {
  _y : stack u64;
  z : stack u64;
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
